[package]
name = "hello"
version = "0.1.0"
authors = ["Mark Achée <mark@achee.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
macro_rules_attribute = "0.0"
old_web_framework = { path = "../.." }
regex = "1.4"
tokio = { version = "1.0",  features = ["full"] }
